Various code quality improvements
Changes includes:
-Improved exception handling
-More use of Lombok library where possible
-Improved logging
-Various cleanups and style improvements